--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -15,3 +15,8 @@ spring.web.locale=pt_BR
 
 #Import Environment
 spring.config.import=optional:file:.env[.properties]
+
+#Springdoc OpenApi 3.1 & Swagger 3
+springdoc.swagger-ui.path=/docs-park.html
+springdoc.api-docs.path=/docs-park
+springdoc.packages-to-scan=br.com.projeto.demoparkapi.web.controller
